--- a/index.html
+++ b/index.html
@@ -559,72 +559,72 @@
     <div class="product-carousel">
         <!-- Product 1 -->
         <div class="product">
-            <img src="images/Collagen.jpg" alt="Collagen">
+            <img src="images/Colllagen.webp" alt="Colllagen">
             <h3>Collagen Booster</h3>
         </div>
         <!-- Product 2 -->
         <div class="product">
-            <img src="images/Sulfate.jpg" alt="Sulfate">
+            <img src="images/Sulfate.webp" alt="Sulfate">
             <h3>Chondroitin Sulfate</h3>
         </div>
         <!-- Product 3 -->
         <div class="product">
-            <img src="images/Q10.jpg" alt="Q10">
+            <img src="images/Q10.webp" alt="Q10">
             <h3>Coenzyme Q10</h3>
         </div>
         <!-- Product 4 -->
         <div class="product">
-            <img src="images/VitaminB1.jpg" alt="Vitamin B1">
+            <img src="images/B1.webp" alt="B1">
             <h3>Vitamin B1 (Thiamine HCL/Mono)</h3>
         </div>
         <!-- Product 5 -->
         <div class="product">
-            <img src="images/VitaminB5.jpg" alt="Vitamin B5">
+            <img src="images/B5.webp" alt="B5">
             <h3>Vitamin B5 (Calcium Pantothenate)</h3>
         </div>
         <!-- Product 6 -->
         <div class="product">
-            <img src="images/VitaminB6.jpg" alt="Vitamin B6">
+            <img src="images/B6.webp" alt="B6">
             <h3>Vitamin B6 (Pyridoxine)</h3>
         </div>
         <!-- Product 7 -->
         <div class="product">
-            <img src="images/GreenTeaExtract.jpg" alt="Green Tea Extract">
+            <img src="images/GreenTea.webp" alt="Green Tea">
             <h3>Green Tea Extract</h3>
         </div>
         <!-- Product 8 -->
         <div class="product">
-            <img src="images/Taurine.jpg" alt="Taurine">
+            <img src="images/Taurine.webp" alt="Taurine">
             <h3>Taurine</h3>
         </div>
         <!-- Product 9 -->
         <div class="product">
-            <img src="images/LCarnitine.jpg" alt="L-Carnitine">
+            <img src="images/L.webp" alt="L">
             <h3>L-Carnitine Variants</h3>
         </div>
         <!-- Product 10 -->
         <div class="product">
-            <img src="images/Aspartame.jpg" alt="Aspartame">
+            <img src="images/Aspartame.webp" alt="Aspartame">
             <h3>Aspartame</h3>
         </div>
         <!-- Product 11 -->
         <div class="product">
-            <img src="images/AcesulfameK.jpg" alt="Acesulfame K">
+            <img src="images/K.webp" alt="K">
             <h3>Acesulfame K</h3>
         </div>
         <!-- Product 12 -->
         <div class="product">
-            <img src="images/Sucralose.jpg" alt="Sucralose">
+            <img src="images/Surclose.webp" alt="Surclose">
             <h3>Sucralose</h3>
         </div>
         <!-- Product 13 -->
         <div class="product">
-            <img src="images/SodiumErythorbate.jpg" alt="Sodium Erythorbate">
+            <img src="images/SodiumErythorbate.webp" alt="Sodium Erythorbate">
             <h3>Sodium Erythorbate</h3>
         </div>
         <!-- Product 14 -->
         <div class="product">
-            <img src="images/Resveratrol.jpg" alt="Resveratrol">
+            <img src="images/Resveratrol.webp" alt="Resveratrol">
             <h3>Resveratrol (50%, 70%, 98%)</h3>
         </div>
     </div>
