--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
         </div>
         <!-- Product 13 -->
         <div class="product">
-            <img src="images/SodiumErythorbate.webp" alt="Sodium Erythorbate">
+            <img src="images/Sodium Erythorbate.webp" alt="Sodium Erythorbate">
             <h3>Sodium Erythorbate</h3>
         </div>
         <!-- Product 14 -->
