--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
         <!-- Product 14 -->
         <div class="product">
             <img src="images/Resveratrol.webp" alt="Resveratrol">
-            <h3>Resveratrol (50%, 70%, 98%)</h3>
+            <h3>Resveratrol</h3>
         </div>
     </div>
 
