--- a/index.html
+++ b/index.html
@@ -1,6 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+      <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Synzon India",
+        "url": "https://yourwebsite.com",
+        "logo": "https://yourwebsite.com/images/synzon-logo.jpg",
+        "sameAs": [
+            "https://facebook.com/yourpage",
+            "https://twitter.com/yourhandle",
+            "https://instagram.com/yourhandle"
+        ],
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+91-123-456-7890",
+            "contactType": "Customer Service"
+        }
+    }
+    </script>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Synzon India - Your Trusted Nutraceutical Partner. Explore our range of high-quality products, including Collagen, Chondroitin Sulfate, and more.">
+    <meta name="keywords" content="Synzon India, Nutraceutical Products, Collagen, Chondroitin Sulfate, Coenzyme Q10, Vitamins">
+    <meta name="author" content="Synzon India">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="Synzon India - Your Trusted Nutraceutical Partner">
+    <meta property="og:description" content="Discover a wide range of nutraceutical products for your health and wellness needs.">
+    <meta property="og:image" content="images/synzon-logo.jpg"> <!-- Update with your logo path -->
+    <meta property="og:url" content="https://yourwebsite.com"> <!-- Replace with your website URL -->
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Synzon India - Your Trusted Nutraceutical Partner">
+    <meta name="twitter:description" content="Explore high-quality nutraceutical products for better health.">
+    <meta name="twitter:image" content="images/synzon-logo.jpg"><!-- Update with your logo path -->
+   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Synzon India - Your Trusted Nutraceutical Partner</title>
