--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
             <a href="#learn-more" class="learn-more-link">Learn More ></a>
         </div>
         <div class="fourth-image">
-            <img src="images/partnership.jpg" alt="Strategic Partnerships"> <!-- Replace with actual image -->
+            <img src="images/istockphoto-1498442212-612x612.jpg" alt="Strategic Partnerships"> <!-- Replace with actual image -->
         </div>
     </div>
 </div>
@@ -816,7 +816,7 @@
 
 /* Third Heading */
 .third-heading {
-    background-image: url('images/third-heading-bg.jpg'); /* Replace with actual image */
+    background-image: url('images/istockphoto-807490932-612x612.jpg'); /* Replace with actual image */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
