--- a/index.html
+++ b/index.html
@@ -731,13 +731,15 @@
     </div>
 </div>
 
-<div id="quality-service" class="section">
-    <div class="section-icon">
-        <a href="#quality-service">
-            <i class="fas fa-medal"></i>
-        </a>
+<!-- Last Two Headings -->
+
+<!-- Commitment to Quality and Service -->
+<div id="quality-service" class="interactive-section">
+    <div class="image-container creative-position">
+        <img src="images/istockphoto-866525434-612x612.jpg" alt="Commitment to Quality and Service">
+        <h2 class="section-heading">Commitment to Quality</h2>
     </div>
-    <div class="content">
+    <div class="hidden-content">
         <h2>Commitment to Quality and Service</h2>
         <ul>
             <li>Certified Manufacturers</li>
@@ -745,17 +747,15 @@
             <li>Timely Deliveries</li>
         </ul>
     </div>
-    <img src="images/istockphoto-866525434-612x612.jpg" alt="Commitment to Quality and Service">
 </div>
 
-<div id="why-choose-us" class="section">
-    <div class="section-icon">
-        <a href="#why-choose-us">
-            <i class="fas fa-check-circle"></i>
-        </a>
+<!-- Why Choose Synzon India -->
+<div id="why-choose-us" class="interactive-section">
+    <div class="image-container creative-position reverse">
+        <img src="images/istockphoto-1410938025-612x612.jpg" alt="Why Choose Us">
+        <h2 class="section-heading">Why Choose Us?</h2>
     </div>
-    <img src="images/istockphoto-1410938025-612x612.jpg" alt="Why Choose Us">
-    <div class="content">
+    <div class="hidden-content">
         <h2>Why Choose Synzon India</h2>
         <ul>
             <li>Extensive Product Range: Access to a wide variety of nutraceutical supplements and excipients to cater to all your needs.</li>
@@ -766,7 +766,123 @@
         </ul>
     </div>
 </div>
+      
+<style>
+/* General Interactive Section Styling */
+.interactive-section {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 60px auto;
+    width: 90%;
+    max-width: 900px;
+    cursor: pointer;
+    overflow: hidden;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
 
+.interactive-section:hover {
+    transform: scale(1.05);
+}
+
+/* Creative Image Positioning */
+.image-container {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    border-radius: 15px;
+    transition: all 0.4s ease;
+}
+
+.creative-position {
+    transform: rotate(-3deg) translateX(-20px);
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+}
+
+.creative-position.reverse {
+    transform: rotate(3deg) translateX(20px);
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.image-container:hover img {
+    transform: scale(1.1);
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
+}
+
+/* Section Heading Over Image */
+.section-heading {
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+    font-size: 22px;
+    font-weight: bold;
+    color: #ffffff;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.5);
+    padding: 8px 15px;
+    border-radius: 10px;
+}
+
+/* Hidden Content */
+.hidden-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.95);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: all 0.5s ease;
+    border-radius: 15px;
+}
+
+.hidden-content h2 {
+    font-size: 28px;
+    color: #0e2841;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.hidden-content ul {
+    list-style: none;
+    padding: 0;
+    font-size: 16px;
+    color: #333;
+    line-height: 1.6;
+    text-align: left;
+}
+
+.hidden-content ul li {
+    margin-bottom: 10px;
+}
+
+/* Interactive Reveal on Click */
+.interactive-section:focus-within .hidden-content,
+.interactive-section:active .hidden-content {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.interactive-section:focus-within .image-container img,
+.interactive-section:active .image-container img {
+    filter: blur(4px);
+}
+</style>
+      
 <style>
 /* General Section Styling */
 .section {
@@ -998,6 +1114,19 @@
         observer.observe(section);
     });
 </script>
-
+<script>
+document.querySelectorAll('.interactive-section').forEach(section => {
+    section.addEventListener('click', () => {
+        const hiddenContent = section.querySelector('.hidden-content');
+        if (hiddenContent.style.opacity === '1') {
+            hiddenContent.style.opacity = '0';
+            hiddenContent.style.transform = 'translateY(100%)';
+        } else {
+            hiddenContent.style.opacity = '1';
+            hiddenContent.style.transform = 'translateY(0)';
+        }
+    });
+});
+</script>
 </body>
 </html>
