--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
     </div>
 </div>
 
-<!-- Interactive Section Container -->
+<!-- Interactive Container for Last Two Sections -->
 <div class="interactive-container">
     <!-- Commitment to Quality and Service -->
     <div id="quality-service" class="interactive-section">
@@ -741,10 +741,11 @@
         </div>
         <div class="hidden-content">
             <h2>Commitment to Quality and Service</h2>
+            <p>At Synzon India, we ensure the highest standards in everything we offer:</p>
             <ul>
-                <li>Certified Manufacturers</li>
-                <li>Premium Ingredients</li>
-                <li>Timely Deliveries</li>
+                <li><b>Certified Manufacturers:</b> Partnered with globally recognized, certified producers.</li>
+                <li><b>Premium Ingredients:</b> Only top-tier ingredients, ensuring exceptional quality.</li>
+                <li><b>Timely Deliveries:</b> Efficient logistics that respect your timelines.</li>
             </ul>
         </div>
     </div>
@@ -757,43 +758,44 @@
         </div>
         <div class="hidden-content">
             <h2>Why Choose Synzon India</h2>
+            <p>Synzon India stands apart for unmatched excellence:</p>
             <ul>
-                <li><b>Extensive Product Range:</b> Access to a wide variety of nutraceutical supplements and excipients to cater to all your needs.</li>
-                <li><b>Quality Assurance:</b> Products sourced from certified manufacturers adhering to global quality standards.</li>
-                <li><b>Competitive Pricing:</b> Cost-effective solutions without compromising on quality.</li>
-                <li>Expert Support: A dedicated team to guide you through product selection, regulatory compliance, and logistical arrangements.</li>
-                <li>Timely Delivery: Efficient supply chain management to ensure your products reach you on time.</li>
+                <li><b>Extensive Product Range:</b> Nutraceutical supplements tailored to diverse needs.</li>
+                <li><b>Quality Assurance:</b> Every product adheres to stringent global quality standards.</li>
+                <li><b>Competitive Pricing:</b> Premium quality at the best market prices.</li>
+                <li><b>Expert Support:</b> Comprehensive guidance through product selection, compliance, and logistics.</li>
+                <li><b>Timely Delivery:</b> Robust supply chains ensure on-time delivery every time.</li>
             </ul>
         </div>
     </div>
 </div>
+
       
 <style>
-/* Container for Side-by-Side Layout */
+/* General Interactive Section Styling */
 .interactive-container {
     display: flex;
-    gap: 30px; /* Space between the sections */
+    gap: 30px;
     justify-content: center;
     align-items: flex-start;
     margin: 60px auto;
-    flex-wrap: wrap; /* Ensure it adjusts on smaller screens */
+    flex-wrap: wrap; /* Adjust for responsive screens */
 }
 
-/* General Interactive Section Styling */
 .interactive-section {
     position: relative;
-    width: 45%; /* Adjust width to fit two items side-by-side */
+    width: 45%; /* Two items side-by-side */
     cursor: pointer;
     overflow: hidden;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
     border-radius: 20px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .interactive-section:hover {
     transform: scale(1.05);
 }
 
-/* Creative Image Positioning */
+/* Image Container with Creative Positioning */
 .image-container {
     position: relative;
     width: 100%;
@@ -838,30 +840,37 @@
     border-radius: 10px;
 }
 
-/* Hidden Content */
+/* Hidden Content Styling */
 .hidden-content {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.95);
+    background: rgba(255, 255, 255, 0.98);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    padding: 20px;
+    padding: 30px;
     opacity: 0;
     transform: translateY(100%);
     transition: all 0.5s ease;
     border-radius: 15px;
+    overflow-y: auto; /* Enable scrolling for long content */
 }
 
 .hidden-content h2 {
-    font-size: 28px;
+    font-size: 26px;
     color: #0e2841;
     margin-bottom: 20px;
     text-align: center;
+}
+
+.hidden-content p {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 20px;
 }
 
 .hidden-content ul {
@@ -871,13 +880,14 @@
     color: #333;
     line-height: 1.6;
     text-align: left;
+    width: 100%;
 }
 
 .hidden-content ul li {
     margin-bottom: 10px;
 }
 
-/* Interactive Reveal on Click */
+/* Reveal Content on Click */
 .interactive-section:focus-within .hidden-content,
 .interactive-section:active .hidden-content {
     opacity: 1;
@@ -892,10 +902,11 @@
 /* Responsive Design */
 @media (max-width: 768px) {
     .interactive-section {
-        width: 100%; /* Stack items vertically on smaller screens */
+        width: 100%; /* Stack items vertically */
     }
 }
 </style>
+
 
       
 <style>
@@ -1133,15 +1144,22 @@
 document.querySelectorAll('.interactive-section').forEach(section => {
     section.addEventListener('click', () => {
         const hiddenContent = section.querySelector('.hidden-content');
-        if (hiddenContent.style.opacity === '1') {
-            hiddenContent.style.opacity = '0';
-            hiddenContent.style.transform = 'translateY(100%)';
-        } else {
+        const isVisible = hiddenContent.style.opacity === '1';
+
+        // Hide all sections before toggling the clicked one
+        document.querySelectorAll('.hidden-content').forEach(content => {
+            content.style.opacity = '0';
+            content.style.transform = 'translateY(100%)';
+        });
+
+        // If the clicked section's content was not visible, show it
+        if (!isVisible) {
             hiddenContent.style.opacity = '1';
             hiddenContent.style.transform = 'translateY(0)';
         }
     });
 });
 </script>
+
 </body>
 </html>
