--- a/index.html
+++ b/index.html
@@ -731,7 +731,6 @@
     </div>
 </div>
 
-<!-- Interactive Container for Last Two Sections -->
 <div class="interactive-container">
     <!-- Commitment to Quality and Service -->
     <div id="quality-service" class="interactive-section">
@@ -803,15 +802,13 @@
     overflow: hidden;
     border-radius: 15px;
     transition: all 0.4s ease;
-}
-
-.creative-position {
-    transform: rotate(-3deg);
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2); /* Shadow for photograph effect */
+    border: 5px solid #fff; /* White border to mimic a photo */
+    transform: rotate(-2deg);
 }
 
 .creative-position.reverse {
-    transform: rotate(3deg);
+    transform: rotate(2deg); /* Reverse rotation for variation */
 }
 
 .image-container img {
@@ -840,14 +837,14 @@
     border-radius: 10px;
 }
 
-/* Hidden Content Styling */
+/* Hidden Content with Background */
 .hidden-content {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.98);
+    background: rgba(240, 248, 255, 0.95); /* Light, slightly transparent color */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -858,6 +855,7 @@
     transition: all 0.5s ease;
     border-radius: 15px;
     overflow-y: auto; /* Enable scrolling for long content */
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle shadow inside */
 }
 
 .hidden-content h2 {
@@ -906,6 +904,7 @@
     }
 }
 </style>
+
 
 
       
