--- a/index.html
+++ b/index.html
@@ -684,248 +684,142 @@
     <button class="carousel-btn next-btn">&gt;</button>
 </section>
 <!-- Content Sections -->
-<div id="about-us" class="section">
-    <div class="section-icon">
-        <a href="#about-us">
-            <i class="fas fa-info-circle"></i>
-        </a>
-    </div>
-    <div class="content">
-        <h2>Welcome to Synzon India</h2>
-        <p>Welcome to Synzon India, your trusted partner in the nutraceutical industry. We are committed to providing exceptional services that help our clients meet their requirements for high-quality nutraceutical supplements and excipients. With a focus on excellence and innovation, we aim to be the leading facilitator in connecting businesses with top-tier products and solutions.</p>
-    </div>
-    <img src="images/istockphoto-1829520432-612x612.jpg" alt="Welcome to Synzon India">
-</div>
+<!-- Content Section Background -->
+<div class="section-background">
+    <div class="section-container">
 
-<div id="expertise" class="section">
-    <div class="section-icon">
-        <a href="#expertise">
-            <i class="fas fa-lightbulb"></i>
-        </a>
-    </div>
-    <img src="images/istockphoto-1442009211-640x640.jpg" alt="Our Expertise in Nutraceutical Solutions">
-    <div class="content">
-        <h2>Our Expertise in Nutraceutical Solutions</h2>
-        <p>At Synzon India, we specialize in bridging the gap between demand and supply in the nutraceutical sector. Our expertise lies in understanding the unique needs of our clients and delivering customized solutions that drive success. We offer a comprehensive range of products, including vitamins, minerals, herbal extracts, and specialty ingredients, ensuring access to the finest quality supplements available in the market.</p>
-    </div>
-</div>
+        <!-- Welcome Section -->
+        <div id="welcome" class="section">
+            <h2>Welcome to Synzon India</h2>
+            <p>Welcome to Synzon India, your trusted partner in the nutraceutical industry. Our goal is to deliver exceptional quality and innovation in every product we offer.</p>
+        </div>
 
-<div id="key-business-area" class="section third-heading">
-    <div class="content-overlay">
-        <h2>Our Key Business Area</h2>
-        <p>Our core focus is on connecting clients with the best products in the nutraceutical industry. Leveraging our extensive network and deep industry knowledge, we source premium ingredients that meet stringent quality standards.</p>
-    </div>
-</div>
+        <!-- Expertise Section -->
+        <div id="expertise" class="section">
+            <h2>Our Expertise</h2>
+            <p>With years of experience in the nutraceutical sector, Synzon India specializes in providing solutions that bridge the gap between supply and demand for premium-quality supplements.</p>
+        </div>
 
-<div id="strategic-partnerships" class="section fourth-heading">
-    <div class="fourth-content">
-        <div class="fourth-text">
-            <h3>About Our Partnerships</h3>
-            <h2>M/S JOINT CO. LTD.</h2>
-            <p>We are proud to be associated with our esteemed partner company, M/S JOINT CO. LTD., based in China. Through this strategic alliance with various renowned manufacturers, we have access to a wide range of top-quality products to offer our clients. This partnership enhances our capability to provide competitive pricing, timely delivery, and a diverse product portfolio that meets the evolving needs of the nutraceutical industry.</p>
-            <a href="#learn-more" class="learn-more-link">Learn More ></a>
+        <!-- Key Business Area Section -->
+        <div id="key-business-area" class="interactive-section">
+            <div class="image-container creative-position">
+                <img src="images/key-business-area.jpg" alt="Key Business Area">
+                <h2 class="section-heading">Key Business Area</h2>
+            </div>
+            <div class="hidden-content">
+                <h2>Our Key Business Area</h2>
+                <p>Our focus is on connecting clients with the best products in the nutraceutical industry. Leveraging our extensive network and deep knowledge, we source premium ingredients to meet stringent quality standards.</p>
+            </div>
         </div>
-        <div class="fourth-image">
-            <img src="images/istockphoto-1498442212-612x612.jpg" alt="Strategic Partnerships"> <!-- Replace with actual image -->
-        </div>
-    </div>
-</div>
 
-<div class="interactive-container">
-    <!-- Commitment to Quality and Service -->
-    <div id="quality-service" class="interactive-section">
-        <div class="image-container creative-position">
-            <img src="images/istockphoto-866525434-612x612.jpg" alt="Commitment to Quality and Service">
-            <h2 class="section-heading">Commitment to Quality</h2>
+        <!-- Strategic Partnerships Section -->
+        <div id="strategic-partnerships" class="interactive-section">
+            <div class="image-container creative-position reverse">
+                <img src="images/strategic-partnerships.jpg" alt="Strategic Partnerships">
+                <h2 class="section-heading">Strategic Partnerships</h2>
+            </div>
+            <div class="hidden-content">
+                <h2>Strategic Partnerships</h2>
+                <p>Synzon India proudly partners with renowned manufacturers worldwide to bring our clients competitive pricing, timely delivery, and a diverse product portfolio that meets the evolving needs of the industry.</p>
+            </div>
         </div>
-        <div class="hidden-content">
-            <h2>Commitment to Quality and Service</h2>
-            <p>At Synzon India, we ensure the highest standards in everything we offer:</p>
-            <ul>
-                <li><b>Certified Manufacturers:</b> Partnered with globally recognized, certified producers.</li>
-                <li><b>Premium Ingredients:</b> Only top-tier ingredients, ensuring exceptional quality.</li>
-                <li><b>Timely Deliveries:</b> Efficient logistics that respect your timelines.</li>
-            </ul>
-        </div>
-    </div>
 
-    <!-- Why Choose Synzon India -->
-    <div id="why-choose-us" class="interactive-section">
-        <div class="image-container creative-position reverse">
-            <img src="images/istockphoto-1410938025-612x612.jpg" alt="Why Choose Us">
-            <h2 class="section-heading">Why Choose Us?</h2>
+        <!-- Commitment to Quality Section -->
+        <div id="quality-service" class="interactive-section">
+            <div class="image-container creative-position">
+                <img src="images/commitment-to-quality.jpg" alt="Commitment to Quality">
+                <h2 class="section-heading">Commitment to Quality</h2>
+            </div>
+            <div class="hidden-content">
+                <h2>Commitment to Quality and Service</h2>
+                <ul>
+                    <li><b>Certified Manufacturers:</b> Partnered with globally recognized, certified producers.</li>
+                    <li><b>Premium Ingredients:</b> Only top-tier ingredients, ensuring exceptional quality.</li>
+                    <li><b>Timely Deliveries:</b> Efficient logistics respecting your timelines.</li>
+                </ul>
+            </div>
         </div>
-        <div class="hidden-content">
-            <h2>Why Choose Synzon India</h2>
-            <p>Synzon India stands apart for unmatched excellence:</p>
-            <ul>
-                <li><b>Extensive Product Range:</b> Nutraceutical supplements tailored to diverse needs.</li>
-                <li><b>Quality Assurance:</b> Every product adheres to stringent global quality standards.</li>
-                <li><b>Competitive Pricing:</b> Premium quality at the best market prices.</li>
-                <li><b>Expert Support:</b> Comprehensive guidance through product selection, compliance, and logistics.</li>
-                <li><b>Timely Delivery:</b> Robust supply chains ensure on-time delivery every time.</li>
-            </ul>
+
+        <!-- Why Choose Synzon India Section -->
+        <div id="why-choose-us" class="interactive-section">
+            <div class="image-container creative-position reverse">
+                <img src="images/why-choose-us.jpg" alt="Why Choose Us">
+                <h2 class="section-heading">Why Choose Us?</h2>
+            </div>
+            <div class="hidden-content">
+                <h2>Why Choose Synzon India</h2>
+                <ul>
+                    <li><b>Extensive Product Range:</b> Nutraceutical supplements tailored to diverse needs.</li>
+                    <li><b>Quality Assurance:</b> Every product adheres to stringent global quality standards.</li>
+                    <li><b>Competitive Pricing:</b> Premium quality at the best market prices.</li>
+                    <li><b>Expert Support:</b> Comprehensive guidance through product selection, compliance, and logistics.</li>
+                    <li><b>Timely Delivery:</b> Robust supply chains ensure on-time delivery every time.</li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
+
       
 <style>
-/* General Section Background Styling */
+/* General Section Styling */
 .section-background {
-    background-color: #f4f8fb; /* Light blueish-grey that contrasts well with a hero image */
-    padding: 60px 20px; /* Add some padding to enhance spacing */
-    margin: 0; /* Ensure no additional margins create gaps */
+    background-color: #f4f8fb; /* Light contrasting background */
+    padding: 50px 0; /* Consistent padding for smooth flow */
 }
 
-/* Section Container to Remove Gaps */
 .section-container {
     display: flex;
     flex-direction: column;
-    gap: 30px; /* Uniform spacing between sections */
+    gap: 30px; /* Add uniform spacing */
 }
 
-/* Ensure Consistent Padding Between Sections */
+/* Section Base Styling */
 .section {
-    padding: 50px 30px; /* Consistent inner padding */
-    background: #ffffff; /* White background for the content area */
-    border-radius: 15px; /* Slight rounding for aesthetics */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    padding: 50px 30px;
+    background: #ffffff;
     margin: 0 auto;
-    max-width: 1200px; /* Keep content centered and within a readable width */
+    border-radius: 15px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    max-width: 1200px;
 }
 
-/* Transition Between Sections */
-.section::before {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 50px; /* Transition effect between sections */
-    background: linear-gradient(to bottom, #f4f8fb, #ffffff); /* Smooth gradient */
-}
-
-/* For Smooth Transitions Between Section Backgrounds */
-.section-background.gradient-transition {
-    background: linear-gradient(to bottom, #f4f8fb, #ffffff);
-}
-</style>
-
-      
-<style>
-/* General Interactive Section Styling */
-.interactive-container {
-    display: flex;
-    gap: 30px;
-    justify-content: center;
-    align-items: flex-start;
-    margin: 60px auto;
-    flex-wrap: wrap; /* Adjust for responsive screens */
-}
-
-.interactive-section {
-    position: relative;
-    width: 45%; /* Two items side-by-side */
-    cursor: pointer;
-    overflow: hidden;
-    border-radius: 20px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.interactive-section:hover {
-    transform: scale(1.05);
-}
-
-/* Image Container with Creative Positioning */
+/* Image Container with Photograph Effect */
 .image-container {
     position: relative;
     width: 100%;
     height: 300px;
     overflow: hidden;
     border-radius: 15px;
-    transition: all 0.4s ease;
-    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2); /* Shadow for photograph effect */
-    border: 5px solid #fff; /* White border to mimic a photo */
+    border: 5px solid #fff;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
     transform: rotate(-2deg);
+    transition: all 0.3s ease;
 }
 
 .creative-position.reverse {
-    transform: rotate(2deg); /* Reverse rotation for variation */
+    transform: rotate(2deg);
 }
 
-.image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.image-container:hover img {
-    transform: scale(1.1);
-    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
-}
-
-/* Section Heading Over Image */
-.section-heading {
-    position: absolute;
-    bottom: 15px;
-    left: 15px;
-    font-size: 22px;
-    font-weight: bold;
-    color: #ffffff;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
-    background: rgba(0, 0, 0, 0.5);
-    padding: 8px 15px;
-    border-radius: 10px;
-}
-
-/* Hidden Content with Background */
+/* Interactive Hidden Content */
 .hidden-content {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(240, 248, 255, 0.95); /* Light, slightly transparent color */
+    background: rgba(255, 255, 255, 0.98);
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: center;
     padding: 30px;
     opacity: 0;
     transform: translateY(100%);
-    transition: all 0.5s ease;
     border-radius: 15px;
-    overflow-y: auto; /* Enable scrolling for long content */
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle shadow inside */
+    transition: all 0.5s ease;
 }
 
-.hidden-content h2 {
-    font-size: 26px;
-    color: #0e2841;
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-.hidden-content p {
-    font-size: 16px;
-    color: #333;
-    margin-bottom: 20px;
-}
-
-.hidden-content ul {
-    list-style: none;
-    padding: 0;
-    font-size: 16px;
-    color: #333;
-    line-height: 1.6;
-    text-align: left;
-    width: 100%;
-}
-
-.hidden-content ul li {
-    margin-bottom: 10px;
-}
-
-/* Reveal Content on Click */
+/* Active Reveal */
 .interactive-section:focus-within .hidden-content,
 .interactive-section:active .hidden-content {
     opacity: 1;
@@ -937,13 +831,14 @@
     filter: blur(4px);
 }
 
-/* Responsive Design */
+/* Responsive Adjustments */
 @media (max-width: 768px) {
     .interactive-section {
-        width: 100%; /* Stack items vertically */
+        width: 100%;
     }
 }
 </style>
+
 
 
 
