--- a/index.html
+++ b/index.html
@@ -50,7 +50,35 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM1te0w1dBw4kFWQu9zK5vAY5Wm8y1VslN9Rj" crossorigin="anonymous">
-    <style>
+   
+<style>
+/* Content Section Background */
+.section-background {
+    background-color: #f4f8fb; /* Set a light, consistent background color */
+    padding: 50px 0; /* Add some padding for spacing */
+    margin: 0; /* Remove unnecessary margins */
+}
+
+/* General Section Styling */
+.section-container {
+    display: flex;
+    flex-direction: column;
+    gap: 50px; /* Uniform spacing between sections */
+}
+
+/* Individual Sections */
+.section {
+    padding: 50px 30px; /* Consistent padding inside sections */
+    background: #ffffff; /* Keep the sections white for contrast */
+    margin: 0 auto; /* Center-align sections */
+    border-radius: 15px; /* Subtle rounding for a clean look */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* Optional shadow for depth */
+    max-width: 1200px; /* Keep content readable and centered */
+}
+</style>
+      
+
+      <style>
 /* Featured Products Section */
 .featured-products {
     text-align: center;
